fix: page styling layout shift fix

--- a/src/components/App.module.scss
+++ b/src/components/App.module.scss
@@ -54,3 +54,12 @@
 .link {
   color: white;
 }
+
+.outlet {
+  font-family: $fontPrimary;
+  font-size: 4em;
+  position: absolute;
+  bottom: 1em;
+  left: 50%;
+  transform: translateX(-50%);
+}
